--- a/output.html
+++ b/output.html
@@ -1,3 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1,width=device-width,">
+    <title>Page Not Found</title>
+</head>
+<body>
+    <h1>Page Not Found</h1>
+
+    <div>
+        <myTag>
+            <p>Sorry, but the page you were trying to view does not exist.</p>
+
+        </myTag>
+
+    </div>
+
+</body>
+
 </html>
