--- a/output.html
+++ b/output.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1,width=device-width,">
-    <title>Page Not Found</title>
-</head>
-<body>
-    <h1>Page Not Found</h1>
-
-    <div>
-        <myTag>
-            <p>Sorry, but the page you were trying to view does not exist.</p>
-
-        </myTag>
-
-    </div>
-
+	<head>
+		<meta charset="utf-8"  >
+		<meta author="Flawless Code"  >
+		<meta keywords="JSON, HTML, transform"  >
+		<link href="style.css" rel="stylesheet" type="text/css"  >
+		<link rel="icon" href="icon.ico"  >
+		<title  >Hello World v10</title>
+	</head>
+<body id="42" style="width:80%;height:10px;text-align:center;">
+	<h1 >Json-Generated HTML page</h1>
+	<p >Example HTML file generated from JSON.</p>
+	<h2 >Imagine smart subtitle here</h2>
+	<div class="nested" >
+		<h3 >Nesting supported</h3>
+	</div>
 </body>
-
 </html>
